fix date timeline alignment, and adjusted colors

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(30, 31, 30), rgb(2, 26, 11));
+  background-image: linear-gradient(to left, rgb(232, 223, 202), rgb(232, 223, 202));
 }
